--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -244,20 +244,19 @@
    opacity: 1;
    width: 180px;
  }
+ .annotator-viewer .knowit_title{
+   font-size: 16px;
+   text-align: center;
+ }
 .annotator-viewer .knowit_url{
   font-size: 13px;
-  /*position: relative;
-  top:11px;*/
-}
-.annotator-viewer .knowit_title{
-  font-size: 15px;
-  /*position: relative;
-  top:7px;*/
+  text-align: center;
+  padding-top: 6px;
 }
 .annotator-viewer .annotator-controls {
     position: relative;
     top: 5px;
-    right: 5px;
+    right: 165px;
     padding-left: 5px;
     opacity: 0;
     -webkit-transition: opacity .2s ease-in;
