--- a/app/static/css/annotator-extensions.css
+++ b/app/static/css/annotator-extensions.css
@@ -8,3 +8,24 @@
 .annotator-widget::after {
     background-image: initial;
 }
+#annotator-close_span {
+  position: absolute;
+  left: 180px;
+  top: -20px;
+  cursor: pointer;
+}
+/* close button */
+.annotator-close{
+  width: 27px;
+}
+.annotator_close_mouseover{
+  visibility: hidden;
+  position: absolute;
+  bottom: 35px;
+  right: 10px;
+  font-size: 12px;
+  color: #3c3c3c;
+}
+#annotator-close_span:hover .annotator_close_mouseover{
+  visibility: visible;
+}
