--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -106,9 +106,7 @@
     margin: 0;
     padding: 0;
     bottom: -130px;
-    /*left: 37px;*/
-    left: 19px;
-    /*border-left: solid 4px #FFC21C;*/
+    top: 0px;
     font-size: 30px;
     text-align: left;
     padding-left: 7px;
@@ -197,7 +195,7 @@
 
 .annotator-viewer div {
     /*padding: 6px 6px*/
-  padding: 0px 2px 0px 12px;
+  padding: 0px 2px 0px 17px;
 }
 
 .annotator-viewer .annotator-item ol,
@@ -208,7 +206,7 @@
 /* styling the text inside the annotation */
 .annotator-viewer .knowit{
   border-left: solid 4px #FFC21C;
-  max-width: 200px;
+  width: 382px;
   opacity: 1;
 }
 .annotator-viewer div:first-of-type,
@@ -229,8 +227,11 @@
   font-size:11px;
   text-align:center;
   border-bottom: 1px solid #C3C3C3;
-  margin: 6px 51px 10px 51px;
+  margin-top: 6px;
+  margin-bottom: 10px;
   padding: 0px 0px 9px 0px;
+  width: 30%;
+  margin-left: 34%;
 }
 .annotator-viewer .knowit_message{
   color:blue;
@@ -242,7 +243,7 @@
 .annotator-viewer .knowit_image{
    padding-bottom:12px;
    opacity: 1;
-   width: 180px;
+   width: 100%;
  }
  .annotator-viewer .knowit_title{
    font-size: 16px;
@@ -256,7 +257,7 @@
 .annotator-viewer .annotator-controls {
     position: relative;
     top: 5px;
-    right: 165px;
+    right: 300px;
     padding-left: 5px;
     opacity: 0;
     -webkit-transition: opacity .2s ease-in;
