footer in audiodoc page is now yellow and awesome. Also removed the feedback form in the audiodoc page (though it's still there in the homepage)

--- a/app/static/css/audiodoc_page.css
+++ b/app/static/css/audiodoc_page.css
@@ -149,3 +149,20 @@ header .container {
   color: black;
   font-size:125%;
 }
+
+footer .footer-above{
+  background-color: #FFC21C;
+}
+footer .footer-below{
+  background-color: #FFC21C;
+}
+footer h3{
+  color:#27282D;
+}
+footer .btn-social{
+  color: #27282D;
+  border: 2px solid #27282D;
+}
+footer .footer-info{
+  color: #F5F5F5;
+}
