--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
   </div>
   <div class="footer-below">
     <div class="container">
-      <div class="row">
+      <div class="row footer-info">
         <div class="col-lg-4">
           Copyright &copy; Know it Wall 2015
         </div>
@@ -43,7 +43,7 @@
           team@knowitwall.com
         </div>
         <div class="col-lg-4">
-          <a href="{{url_for('terms')}}">Terms of Use</a>
+          <a href="{{url_for('terms')}}" target='_blank' class="footer-info">Terms of Use</a>
         </div>
       </div>
     </div>
