--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -393,12 +393,18 @@
           </div>
         <!-- </div> -->
         </div>
+</div>
 
+</div>
+<div class="container ">
+
+<div class="row">
         <div class="col-md-12" id="read">
           <div class="transcript" id="annotator_transcript"> <!-- transcript class gives the padding. annotator_transcript allows annotator to work -->
             {{ audiodocs[0].transcript | safe }}
             <!-- Go to www.addthis.com/dashboard to customize your tools -->
-            <div class="addthis_sharing_toolbox" style="float: right;"></div>
+            <div class="addthis_sharing_toolbox" style="float: right;">
+            </div>
           </div>
         </div>
       </div>  <!-- row -->
