--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -149,6 +149,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    border-left: 4px solid #ffc21c;
 }
 
 .annotator-widget::after {
@@ -205,7 +206,6 @@
 
 /* styling the text inside the annotation */
 .annotator-viewer .knowit{
-  border-left: solid 4px #FFC21C;
   width: 382px;
   opacity: 1;
 }
