--- a/app/static/css/annotator-extensions.css
+++ b/app/static/css/annotator-extensions.css
@@ -29,3 +29,21 @@
 #annotator-close_span:hover .annotator_close_mouseover{
   visibility: visible;
 }
+.knowit_button{
+  border: 1.5px solid black;
+  border-radius: 7px;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  position: absolute;
+  top: 429px;
+  left:710px;
+}
+.knowit_button_svg{
+  margin-top: 28%;
+  margin-left: 28%;
+}
+.knowit_button:hover{
+  border: solid 1.5px #ffc21c;
+  background-color: #ffc21c;
+}
