working on a modified annotation version 2. old school version control

--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -532,7 +532,7 @@
   <!-- <script src="/static/js/showdown.min.js"></script> -->
 
   <!-- annotator.js -->
-  <script src="/static/js/annotator-full-1.2.7-modified.js"></script>
+  <script src="/static/js/annotator-modif-version2.js"></script>
   <script src="/static/js/annotator-extensions.js"></script>
 
 </script>
