--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -334,13 +334,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
-          <a href="audiodoc/{{audiodocs[0].url}}" class="episode-title">
+          <a href="episodes/{{audiodocs[0].url}}" class="episode-title">
             {{audiodocs[0].topic_name | safe}}
           </a>
         </div>
 
         <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
-           <i style="color: {{audiodocs[0].by_in_colour}}">by</i> <a href="audiodoc/{{audiodocs[0].url}}#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i style="color: {{audiodocs[0].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
+           <i style="color: {{audiodocs[0].by_in_colour}}">by</i> <a href="episodes/{{audiodocs[0].url}}#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i style="color: {{audiodocs[0].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
 
       </div>
     </div>
@@ -374,11 +374,11 @@
           {% for audiodoc in audiodocs[1:5] %}
           <div class="col-md-3">
             <div style="background: url('{{audiodoc.topic_image_box}}'); background-size:cover;" class='box_image text-center'>
-              <a href="audiodoc/{{audiodoc.url}}" class="box_episode_title" >
+              <a href="episodes/{{audiodoc.url}}" class="box_episode_title" >
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="episodes/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -391,11 +391,11 @@
           {% for audiodoc in audiodocs[5:9] %}
           <div class="col-md-3">
             <div style="background: url('{{audiodoc.topic_image_box}}'); background-size:cover;" class='box_image text-center'>
-              <a href="audiodoc/{{audiodoc.url}}" class="box_episode_title">
+              <a href="episodes/{{audiodoc.url}}" class="box_episode_title">
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="episodes/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -409,11 +409,11 @@
           {% for audiodoc in audiodocs[9:13] %}
           <div class="col-md-3">
             <div style="background: url('{{audiodoc.topic_image_box}}'); background-size:cover;" class='box_image text-center'>
-              <a href="audiodoc/{{audiodoc.url}}" class="box_episode_title">
+              <a href="episodes/{{audiodoc.url}}" class="box_episode_title">
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="episodes/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -427,11 +427,11 @@
           {% for audiodoc in audiodocs[13:14] %}
           <div class="col-md-3 last_boxes_center">
             <div style="background: url('{{audiodoc.topic_image_box}}'); background-size:cover;" class='box_image text-center'>
-              <a href="audiodoc/{{audiodoc.url}}" class="box_episode_title">
+              <a href="episodes/{{audiodoc.url}}" class="box_episode_title">
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="episodes/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -442,11 +442,11 @@
           {% for audiodoc in audiodocs[14:17] %}
           <div class="col-md-3">
             <div style="background: url('{{audiodoc.topic_image_box}}'); background-size:cover;" class='box_image text-center'>
-              <a href="audiodoc/{{audiodoc.url}}" class="box_episode_title">
+              <a href="episodes/{{audiodoc.url}}" class="box_episode_title">
                 {{audiodoc.topic_name | safe}}
               </a>
               <p style="font-size:0.8em;">
-                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="audiodoc/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">by</i> <a href="episodes/{{audiodoc.url}}#author" class="highlight">{{audiodoc.author_name | safe}}</a> <i style="color: {{audiodoc.by_in_colour}}; color: {{audiodoc.by_in_colour_box}};">in</i> <span class="highlight">{{audiodoc.discipline}} </span>
               </p>
             </div>
             <div>
@@ -463,16 +463,16 @@
                 Science
               </p>
               <ul>
-                <li href="audiodoc/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
+                <li href="episodes/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
                   {{audiodocs[0].topic_name | safe}}
                 </li>
-                <li href="audiodoc/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
+                <li href="episodes/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
                   {{audiodocs[4].topic_name | safe}}
                 </li>
-                <li href="audiodoc/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
+                <li href="episodes/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
                   {{audiodocs[6].topic_name | safe}}
                 </li>
-                <li href="audiodoc/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
+                <li href="episodes/{{audiodocs[0].url}}" class="episode-title" style="font-size:1.2em;margin-top:1em;">
                   {{audiodocs[4].topic_name | safe}}
                 </li>
               </ul>
