--- a/app/static/css/annotator-extensions.css
+++ b/app/static/css/annotator-extensions.css
@@ -35,13 +35,11 @@
   width: 25px;
   height: 25px;
   cursor: pointer;
-  position: absolute;
-  top: 499px;
-  left:710px;
 }
 .knowit_button_svg{
-  margin-top: 28%;
-  margin-left: 28%;
+  position: relative;
+  top: -7px;
+  left: 6px;
 }
 .knowit_button:hover{
   border: solid 1.5px #ffc21c;
