worked on annotation on mobile

--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -207,9 +207,10 @@
   margin-left: 50px;
   border: 2px solid #C5C5C5;
   border-radius: 10px;
+  width: 100%;
 }
 .annotator-viewer .knowit{
-  width: 450px;
+  width: 100%;
   opacity: 1;
 }
 .annotator-viewer div:first-of-type,
@@ -217,6 +218,10 @@
     line-height: 1.5;
     background-color: white;
     background-clip: content-box;
+}
+/*this gives the width of the whole annotation*/
+.annotator-annotation{
+  width: 450px;
 }
 /*styles the image in the annotations*/
 .annotator-viewer .knowit_link{
