--- a/app/static/css/annotator-extensions.css
+++ b/app/static/css/annotator-extensions.css
@@ -51,3 +51,31 @@
   border: solid 1.5px #ffc21c;
   background-color: #ffc21c;
 }
+.knowit_img{
+  width:125px;
+  margin-left:46%;
+  border:1px solid #2c3e50;
+  border-radius:10px;
+  padding:7px;
+  margin-bottom:6px;
+  background-color: white;
+}
+/*annotation size & positioning on mobile*/
+@media(max-width:400px){
+  .annotator-annotation{
+    width: 300px;
+  }
+  .entire_knowit{
+    margin-left: 7px;
+  }
+  #annotator-close_span{
+    left:275px;
+    top: 3px;
+  }
+  .annotator-outer{
+    left: 2%;
+  }
+  .knowit_img{
+    margin-left: 31%;
+  }
+}
