--- a/app/static/css/audiodoc_page.css
+++ b/app/static/css/audiodoc_page.css
@@ -8,6 +8,7 @@
 .audiodoc_bio{
   font-size:20px;
   margin-bottom:20px;
+  text-align: justify;
 }
 .audiodoc_narrate-credits{
   font-style:italic;
@@ -19,6 +20,7 @@
   .audiodoc_bio{
     font-size:18px;
     margin-bottom:10px;
+    text-align: left;
   }
   .audiodoc_narrate-credits{
     font-size:18px;
