--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -248,19 +248,34 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-        <p>
-          Toggle discipline
-        </p>
+      <div class="col-md-4 col-md-offset-4 archive_filter">
+        <ul>
+          <li>
+              <p>
+              All
+              </p>
+          </li>
+          <li>
+              <p>
+                Arts
+              </p>
+          </li>
+          <li>
+              <p>
+                Sciences
+              </p>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
 </section>
 
+<!-- Archive -->
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 archive_episode_list page-scroll">
+      <div class="col-md-6 archive_episode_list">
         <h2 class="archive_category">
           All Episodes
         </h2>
