working on archive filter. TODO: go through discipline list when you click on category filter

--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -38,6 +38,7 @@
   font-size: 17px;
 }
 
+
 /* List of episode titles */
 .archive_episode_list{
   border: 3px solid #ffc21c;
@@ -64,7 +65,9 @@
 .archive_title_click{
   color: inherit;
 }
-
+.archive_disciplines_hidden{
+  display: none;
+}
 /* List of episode images */
 .archive_image_list{
   margin-right: -10px;
