--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -38,6 +38,9 @@
   font-size: 17px;
 }
 
+.archive_row{
+  position: relative;
+}
 
 /* List of episode titles */
 .archive_episode_list{
@@ -54,10 +57,13 @@
 }
 .archive_topic_name{
   font-style: italic;
+  margin-bottom: 0px;
 }
+
 .archive_title_info{
   color: #b1b1b1;
   font-size: 16px;
+  margin-bottom: 25px;
 }
 .archive_title_info i {
   font-weight: 100;
@@ -73,7 +79,10 @@
   margin-right: -10px;
   margin-left: 10px;
   overflow: scroll;
-  max-height: 1229px;
+  height: 100%;
+  position: absolute;
+  right:0;
+  top:0;
 }
 .archive_episode_image{
   width: 100%;
