--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -296,7 +296,20 @@
         {% for audiodoc in audiodocs %}
         <div id="{{audiodoc.url}}" class="archive_episode_category_{{audiodoc.category}}">
           <a href="episodes/{{audiodoc.url}}" target="_blank">
-            <img src="{{audiodoc.topic_image}}" alt="episode image" class="archive_episode_image" />
+            <div class="archive_image_padding">
+              <div class="archive_image_element" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('{{ audiodoc.topic_image }}');background-size:cover;">
+                <p href="episodes/{{audiodoc.url}}" class="episode-title archive_episode_title" target="_blank">
+                  {{audiodoc.topic_name | safe}}
+                </p>
+                <div class="archive_wrapper">
+                <i>by</i> <a href="episodes/{{audiodoc.url}}#author" target="_blank" class="highlight">{{audiodoc.author_name | safe}}</a> <i>in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                <p class="archive_abstract">
+                  {{audiodoc.topic_description | safe}}
+                </p>
+              </div>
+
+              </div>
+            </div>
           </a>
         </div>
         {% endfor %}
