--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -275,45 +275,49 @@
 <section>
   <div class="container">
     <div class="row archive_row">
-      <div class="col-md-6 archive_episode_list">
-        <h2 id="archive_category">
-          All Episodes
-        </h2>
-        {% for audiodoc in audiodocs %}
-        <div class="archive_episode_category_{{audiodoc.category}}">
-          <a class="archive_title_click" href="#{{audiodoc.url}}">
-            <p class="archive_topic_name">
-              {{audiodoc.topic_name | safe}}
+      <div class="col-md-6 archive_episode_list_column">
+        <div class="col-md-12 archive_episode_list">
+          <h2 id="archive_category">
+            All Episodes
+          </h2>
+          {% for audiodoc in audiodocs %}
+          <div class="archive_episode_category_{{audiodoc.category}}">
+            <a class="archive_title_click" href="#{{audiodoc.url}}">
+              <p class="archive_topic_name">
+                {{audiodoc.topic_name | safe}}
+              </p>
+            </a>
+            <p class="archive_title_info">
+              <i>by</i> {{audiodoc.author_name | safe}} <i>in</i> {{audiodoc.discipline}}
             </p>
-          </a>
-          <p class="archive_title_info">
-            <i>by</i> {{audiodoc.author_name | safe}} <i>in</i> {{audiodoc.discipline}}
-          </p>
+          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
-      <div class="col-md-6 archive_image_list">
-        {% for audiodoc in audiodocs %}
-        <div id="{{audiodoc.url}}" class="archive_episode_category_{{audiodoc.category}}">
-          <a href="episodes/{{audiodoc.url}}" target="_blank">
-            <div class="archive_image_padding">
-              <div class="archive_image_element" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('{{ audiodoc.topic_image }}');background-size:cover;">
-                <p href="episodes/{{audiodoc.url}}" class="episode-title archive_episode_title" target="_blank">
-                  {{audiodoc.topic_name | safe}}
-                </p>
-                <div class="archive_wrapper">
-                <i>by</i> <a href="episodes/{{audiodoc.url}}#author" target="_blank" class="highlight">{{audiodoc.author_name | safe}}</a> <i>in</i> <span class="highlight">{{audiodoc.discipline}} </span>
-                <p class="archive_abstract">
-                  {{audiodoc.topic_description | safe}}
-                </p>
+      <div class="col-md-6 archive_image_list_column">
+        <div class="col-md-12 archive_image_list">
+          {% for audiodoc in audiodocs %}
+          <div id="{{audiodoc.url}}" class="archive_episode_category_{{audiodoc.category}}">
+            <a href="episodes/{{audiodoc.url}}" target="_blank">
+              <div class="archive_image_padding">
+                <div class="archive_image_element" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('{{ audiodoc.topic_image }}');background-size:cover;">
+                  <p href="episodes/{{audiodoc.url}}" class="episode-title archive_episode_title" target="_blank">
+                    {{audiodoc.topic_name | safe}}
+                  </p>
+                  <div class="archive_wrapper">
+                  <i>by</i> <a href="episodes/{{audiodoc.url}}#author" target="_blank" class="highlight">{{audiodoc.author_name | safe}}</a> <i>in</i> <span class="highlight">{{audiodoc.discipline}} </span>
+                  <p class="archive_abstract">
+                    {{audiodoc.topic_description | safe}}
+                  </p>
+                </div>
+                </div>
               </div>
+            </a>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
 
-              </div>
-            </div>
-          </a>
-        </div>
-        {% endfor %}
-      </div>
     </div>
 
   </div>
