--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -17,6 +17,9 @@ body{
   margin-top: 65px;
   padding: 0px 0px;
 }
+.archive_filter_disciplines{
+  margin-top: 1px
+}
 .archive_filter ul{
   list-style-type: none;
   display: table;
@@ -43,19 +46,19 @@ body{
   margin: 0px;
   font-size: 17px;
 }
+#button_Sciences{
+  padding: 25px 25px;
+}
 /* 'All Episodes' is selected by default */
 #button_All{
   background-color: rgba(255, 194, 28, 0.8);
   border-radius: 7px;
 }
-/* set .archive_row to absolute positioning to control the position/height of .archive_image_list */
+/* set .archive_row to relative positioning to control the position/height of .archive_image_list */
 .archive_row{
   position: relative;
 }
 /* List of episode titles */
-.archive_episode_list_column{
-
-}
 .archive_episode_list{
   text-align: center;
   padding-left: 0px;
@@ -99,7 +102,7 @@ body{
   border-radius: 3px;
 }
 .archive_image_padding{
-  padding-bottom: 2px;
+  padding-bottom: 4px;
   background-color: white;
 }
 /* darken the episode images */
