--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -243,7 +243,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2 class="archive_title">
-        Knowit Wall episodes
+        Know it Wall episodes
       </h2>
       </div>
     </div>
@@ -268,6 +268,29 @@
         </ul>
       </div>
     </div>
+
+    <!-- <div class="row">
+      <div class="col-md-4 col-md-offset-4 archive_filter archive_filter_disciplines">
+        <ul>
+          <li>
+              <p id="button_All">
+              All
+              </p>
+          </li>
+          <li>
+              <p id="button_Arts">
+                Arts
+              </p>
+          </li>
+          <li>
+              <p id="button_Sciences">
+                Sciences
+              </p>
+          </li>
+        </ul>
+      </div>
+    </div> -->
+
   </div>
 </section>
 
