--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -330,7 +330,7 @@
 
 
 
-  <header style="background:url('{{ audiodocs[0].topic_image_home }}'); background-size:cover;">
+  <header style="background:linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.3)), url('{{ audiodocs[0].topic_image }}'); background-size:cover; background-position: 0px 77px;">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
