--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -300,7 +300,7 @@
           <div id="{{audiodoc.url}}" class="archive_episode_category_{{audiodoc.category}}">
             <a href="episodes/{{audiodoc.url}}" target="_blank">
               <div class="archive_image_padding">
-                <div class="archive_image_element" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('{{ audiodoc.topic_image_archive }}');background-size:cover;">
+                <div class="archive_image_element" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('{{ audiodoc.topic_image }}');background-size:cover;">
                   <p href="episodes/{{audiodoc.url}}" class="episode-title archive_episode_title" target="_blank">
                     {{audiodoc.topic_name | safe}}
                   </p>
