--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -268,6 +268,25 @@
         </ul>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 archive_filter archive_mobile_display">
+        <ul>
+          <li>
+              <p id="button_titles">
+              Titles only
+              </p>
+          </li>
+          <li>
+              <p id="button_images">
+                Episode image
+              </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
   </div>
 </section>
 
@@ -283,6 +302,11 @@
           {% for audiodoc in audiodocs %}
           <div class="archive_episode_category_{{audiodoc.category}}">
             <a class="archive_title_click" href="#{{audiodoc.url}}">
+              <p class="archive_topic_name">
+                {{audiodoc.topic_name | safe}}
+              </p>
+            </a>
+            <a class="archive_title_click_mobile" href="episodes/{{audiodoc.url}}" target="_blank">
               <p class="archive_topic_name">
                 {{audiodoc.topic_name | safe}}
               </p>
