--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -169,6 +169,7 @@ footer .footer-info{
 
 /* mobile version */
 
+/* Category title for the images/abstracts */
 .archive_mobile_display{
   display: none;
 }
@@ -192,14 +193,15 @@ footer .footer-info{
     position: static;
     padding-left: 14px;
     padding-right: 14px;
-    display: none;
+    display: block;
   }
   .archive_image_list{
     overflow: visible;
     position: static;
   }
   .archive_episode_list_column{
-    padding-right: 0px
+    padding-right: 0px;
+    display: none;
   }
   .archive_image_padding{
     padding-bottom: 12px;
@@ -242,6 +244,9 @@ footer .footer-info{
   .archive_episode_list{
     padding: 0px 30px;
   }
+  .archive_header{
+    padding-bottom: 0px;
+  }
 }
 @@media(max-width:320px) {
   .archive_abstract{
@@ -254,3 +259,23 @@ footer .footer-info{
  #button_titles{
    background-color: rgba(255, 194, 28, 0.8);
  }
+
+
+.scroll-top .btn {
+  border-radius: 0px;
+}
+.toggle-off.btn{
+  padding-left:34px;
+  background-color: white;
+  color: #33353d;
+}
+.toggle-on.btn{
+  background-color: white;
+  color: #33353d;
+}
+.toggle-handle{
+  background-color: #ffc21c;
+}
+.btn-default:hover{
+  background-color: #ffc21c;
+}
