--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -893,16 +893,17 @@ footer .footer-below {
     position: fixed;
     right: 2%;
     bottom: 2%;
+    opacity: 0.8
     width: 50px;
     height: 50px;
 }
 
 .scroll-top .btn {
-    width: 50px;
-    height: 50px;
+    /*width: 50px;
+    height: 50px;*/
     border-radius: 100%;
-    font-size: 20px;
-    line-height: 28px;
+    /*font-size: 20px;
+    line-height: 28px;*/
 }
 
 .scroll-top .btn:focus {
