--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -22,6 +22,10 @@
 
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
+
+
+  <!-- TEST: bootstrap toggle -->
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
   <link href="/static/css/archive_page.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
@@ -269,8 +273,9 @@
       </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-md-4 col-md-offset-4 archive_filter archive_mobile_display">
+        <input id="toggle-event" type="checkbox" data-toggle="toggle" data-on="Titles" data-off="Images">
         <ul>
           <li>
               <p id="button_titles">
@@ -284,7 +289,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
 
 
   </div>
@@ -324,7 +329,8 @@
             All Episodes
           </h2>
           {% for audiodoc in audiodocs %}
-          <div id="{{audiodoc.url}}" class="archive_episode_category_{{audiodoc.category}}">
+          <div class="archive_episode_category_{{audiodoc.category}}">
+            <div id="{{audiodoc.url}}" style="visibility:hidden;position: relative;bottom: 85px;"></div>
             <a href="episodes/{{audiodoc.url}}" target="_blank">
               <div class="archive_image_padding">
                 <div class="archive_image_element" style="background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), url('{{ audiodoc.topic_image }}');background-size:cover;">
@@ -355,15 +361,27 @@
 {% block jsscripts %}
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-top page-scroll visible-xs visble-sm">
-    <a class="btn btn-primary" href="#page-top">
+  <div class="scroll-top visible-xs visble-sm">
+    <!-- <a class="btn btn-primary" href="#page-top">
       <i class="fa fa-chevron-up"></i>
-    </a>
+    </a> -->
+    <input id="toggle-title_abstract" type="checkbox" data-toggle="toggle" data-on="Titles" data-off="Abstracts">
   </div>
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/jquery.easing.min.js"></script>
 <script src="/static/js/knowitwall.js"></script>
 <script src="/static/js/archive_filter.js"></script>
+
+<!-- TEST: bootstrap toggle -->
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<script>
+  // $(function() {
+  //   $('#toggle-title_abstract').change(function() {
+  //     $('#console-event').html('Toggle: ' + $(this).prop('checked'))
+  //     console.log($(this).prop('checked'));
+  //   })
+  // })
+</script>
 
 </body>
 {% endblock %}
